[tool.poetry]
name = "habrparser"
version = "0.1.0"
description = "Simple proxy"
authors = ["Dmitriy Shesterkin <dmitriy.shesterkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
httpx = "^0.18.1"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-env = "^0.6.2"
pytest-asyncio = "^0.15.1"
pytest-mccabe = "^2.0"
mypy = "^0.812"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
